--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <meta name="description" content="Aspose Paid Support Helpdesk offering priority help to customers">
     <meta name="keywords" content="Aspose Support, Helpdesk, Paid Helpdesk, Priority Support, Aspose Paid Supprot, Aspose APIs">
-    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
     <link href="css/custom-pshelpdesk.css" rel="stylesheet" />
     <title>Paid Support Helpdesk</title>
     
@@ -83,7 +83,7 @@
                             <h1 id="mainHeading">Paid Support Helpdesk</h1>
                         </div>
                         <div class="col-lg-6 tr pull-right padding0">
-                                <img class="col-xs-12 totalimg mt45px lazyloaded" src="img/paid-support.png" alt="Aspose Free Consulting" id="headerImg">        
+                                <img class="col-xs-12 totalimg mt45px lazyloaded" src="paid-support.png" alt="Aspose Free Consulting" id="headerImg">        
                         </div>
                         <div class="col-lg-6 padding0">
                                 <h4 id="mainSubHeading">Comprehensive support on a priority basis</h4>
@@ -120,7 +120,7 @@
                 <div class="row tips-row">
                     <div class="t-icon-text padding0">
                         <ul>
-                            <li><img class="tipImg mt45px lazyloaded" src="img/tipicon.png" alt="Aspose Paid Support Helpdesk" id="tipImg"></li>
+                            <li><img class="tipImg mt45px lazyloaded" src="tipicon.png" alt="Aspose Paid Support Helpdesk" id="tipImg"></li>
                             <li></li>
                             <li><span>Be sure to browse our <a href="#" target="_blank"><u>FAQs</u></a> section before opening a new ticket</span></li>
                         </ul>
