Corrected css source path

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Aspose Paid Support Helpdesk offering priority help to customers">
     <meta name="keywords" content="Aspose Support, Helpdesk, Paid Helpdesk, Priority Support, Aspose Paid Supprot, Aspose APIs">
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
-    <link href="css/custom-pshelpdesk.css" rel="stylesheet" />
+    <link href="custom-pshelpdesk.css" rel="stylesheet" />
     <title>Paid Support Helpdesk</title>
     
     <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/aspose/css/common.css?v0.13" type="text/css" />
