Updated file HTML

--- a/index.html
+++ b/index.html
@@ -77,23 +77,22 @@
 <div class="container-fluid helpdesk-head header2 productfamilyheader minify-header">
         <div class="container">
             <div class="row page-header">
-                <div class="col-lg-12">
-                    
-                        <div class="col-lg-6 padding0">
+                        <div class="col-lg-6 order-lg-2">
+                            <div class="tr pull-right">
+                                    <img class="totalimg lazyloaded" src="img/paid-support.png" alt="Aspose Free Consulting" id="headerImg">        
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
                             <h4 class="welcomeHeading">Welcome to aspose.com</h4>
                             <h1 id="mainHeading">Paid Support Helpdesk</h1>
-                        </div>
-                        <div class="col-lg-6 tr pull-right padding0">
-                                <img class="col-xs-12 totalimg mt45px lazyloaded" src="paid-support.png" alt="Aspose Free Consulting" id="headerImg">        
-                        </div>
-                        <div class="col-lg-6 padding0">
-                                <h4 id="mainSubHeading">Comprehensive support on a priority basis</h4>
-                                <h4 id="mainSubHeading">Direct access to Paid Support management team</h4>
-                                <h4 id="mainSubHeading">Use of our issue tracking system</h4>
-                                <h6 id="psDetail">Paid Support subscription is purchased as a separate product and is not a part of product license.</h6>
+                            <h4 id="mainSubHeading">Comprehensive support on a priority basis</h4>
+                            <h4 id="mainSubHeading">Direct access to Paid Support management team</h4>
+                            <h4 id="mainSubHeading">Use of our issue tracking system</h4>
+                            <h6 id="psDetail">Paid Support subscription is purchased as a separate product and is not a part of product license.</h6>
+                            <div class="btn-container">
                                 <button class="btn-hdr" id="get-psupport" value="Get Paid Support">Get Paid Support</button><button class="btn-hdr">Sign In</button>
+                            </div>
                         </div>
-                </div>
             </div>
 
         </div>
@@ -106,7 +105,7 @@
                         <div class="t-panel">
                             <h3>Open a new ticket</h3>
                             <p>Please provide as much detail as possible so we can best assist you. To update a previously submitted ticket, please login.</p>
-                            <button class="btn t-panel-button">Open a new ticket</button>
+                            <button class="btn t-panel-button">Open a newticket</button>
                         </div>
                     </div>
                     <div class="api-box col-lg-6">
@@ -121,7 +120,7 @@
                 <div class="row tips-row">
                     <div class="t-icon-text padding0">
                         <ul>
-                            <li><img class="tipImg mt45px lazyloaded" src="tipicon.png" alt="Aspose Paid Support Helpdesk" id="tipImg"></li>
+                            <li><img class="tipImg mt45px lazyloaded" src="img/tipicon.png" alt="Aspose Paid Support Helpdesk" id="tipImg"></li>
                             <li></li>
                             <li><span>Be sure to browse our <a href="#" target="_blank"><u>FAQs</u></a> section before opening a new ticket</span></li>
                         </ul>
