Changed image file paths

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <div class="row page-header">
                         <div class="col-lg-6 order-lg-2">
                             <div class="tr pull-right">
-                                    <img class="totalimg lazyloaded" src="img/paid-support.png" alt="Aspose Free Consulting" id="headerImg">        
+                                    <img class="totalimg lazyloaded" src="paid-support.png" alt="Aspose Free Consulting" id="headerImg">        
                             </div>
                         </div>
                         <div class="col-lg-6">
@@ -120,7 +120,7 @@
                 <div class="row tips-row">
                     <div class="t-icon-text padding0">
                         <ul>
-                            <li><img class="tipImg mt45px lazyloaded" src="img/tipicon.png" alt="Aspose Paid Support Helpdesk" id="tipImg"></li>
+                            <li><img class="tipImg mt45px lazyloaded" src="tipicon.png" alt="Aspose Paid Support Helpdesk" id="tipImg"></li>
                             <li></li>
                             <li><span>Be sure to browse our <a href="#" target="_blank"><u>FAQs</u></a> section before opening a new ticket</span></li>
                         </ul>
