--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                         <div class="col-lg-6">
                             <h4 class="welcomeHeading">Welcome to aspose.com</h4>
                             <h1 id="mainHeading">Paid Support Helpdesk</h1>
-                            <h4 id="mainSubHeading">Comprehensive support on a priority basis</h4>
-                            <h4 id="mainSubHeading">Direct access to Paid Support management team</h4>
-                            <h4 id="mainSubHeading">Use of our issue tracking system</h4>
+                            <h4 id="mainSubHeading">- Comprehensive support on a priority basis</h4>
+                            <h4 id="mainSubHeading">- Direct access to Paid Support management team</h4>
+                            <h4 id="mainSubHeading">- Use of our issue tracking system</h4>
                             <h6 id="psDetail">Paid Support subscription is purchased as a separate product and is not a part of product license.</h6>
                             <div class="btn-container">
                                 <button class="btn-hdr" id="get-psupport" value="Get Paid Support">Get Paid Support</button><button class="btn-hdr">Sign In</button>
