--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="robots" content="noindex,nofollow">
     <meta name="description" content="Aspose Paid Support Helpdesk offering priority help to customers">
     <meta name="keywords" content="Aspose Support, Helpdesk, Paid Helpdesk, Priority Support, Aspose Paid Supprot, Aspose APIs">
-    <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
-    <link href="custom-pshelpdesk.css" rel="stylesheet" />
+    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
+    <link href="custom-pshelpdeskV2.css" rel="stylesheet" />
     <title>Paid Support Helpdesk</title>
     
     <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/aspose/css/common.css?v0.13" type="text/css" />
@@ -33,12 +31,6 @@
         #footer {
             bottom: 0 !important;
         }
-
-        body {
-            background-image: none !important;
-            font-family: 'Open Sans', sans-serif;
-        }
-
         .bodycontent {
             min-height: 400px;
         }
@@ -48,7 +40,7 @@
     </style>
 </head>
 <body>
-    <div id='DynabicMenuInnerDiv'></div>
+<div id='DynabicMenuInnerDiv'></div>
 
 <button id="ps-menubtn" class=""><i class="fa fa-ellipsis-v"></i></button>
 <div class="container-fluid ps-submenu bg-grey">
@@ -85,9 +77,13 @@
                         <div class="col-lg-6">
                             <h4 class="welcomeHeading">Welcome to aspose.com</h4>
                             <h1 id="mainHeading">Paid Support Helpdesk</h1>
-                            <h4 id="mainSubHeading">- Comprehensive support on a priority basis</h4>
-                            <h4 id="mainSubHeading">- Direct access to Paid Support management team</h4>
-                            <h4 id="mainSubHeading">- Use of our issue tracking system</h4>
+                            <div class="sub-heading-list">
+                                <ul>
+                                    <li><h4 class="mainSubHeading">Comprehensive support on a priority basis</h4></li>
+                                    <li><h4 class="mainSubHeading">Direct access to Paid Support management team</h4></li>
+                                    <li><h4 class="mainSubHeading">Use of our issue tracking system</h4></li>
+                                </ul>
+                            </div>
                             <h6 id="psDetail">Paid Support subscription is purchased as a separate product and is not a part of product license.</h6>
                             <div class="btn-container">
                                 <button class="btn-hdr" id="get-psupport" value="Get Paid Support">Get Paid Support</button><button class="btn-hdr">Sign In</button>
