--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Aspose Support, Helpdesk, Paid Helpdesk, Priority Support, Aspose Paid Supprot, Aspose APIs">
     <meta name="robots" content="noindex,nofollow">
     <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
-    <link href="custom-pshelpdeskV2.css" rel="stylesheet" />
+    <link href="custom-pshelpdesk.css" rel="stylesheet" />
     <title>Paid Support Helpdesk</title>
     
     <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/aspose/css/common.css?v0.13" type="text/css" />
