--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Aspose Paid Support Helpdesk offering priority help to customers">
     <meta name="keywords" content="Aspose Support, Helpdesk, Paid Helpdesk, Priority Support, Aspose Paid Supprot, Aspose APIs">
     <meta name="robots" content="noindex,nofollow">
-    <link rel="shortcut icon" type="image/ico" href="img/favicon.ico" />
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
     <link href="custom-pshelpdesk.css" rel="stylesheet" />
     <title>Paid Support Helpdesk</title>
     
