--- a/index.html
+++ b/index.html
@@ -9,25 +9,29 @@
     <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
     <link href="custom-pshelpdesk.css" rel="stylesheet" />
     <title>Paid Support Helpdesk</title>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <meta name="description" content="Aspose Paid Support Helpdesk offering priority help to customers">
+    <meta name="keywords" content="Aspose Support, Helpdesk, Paid Helpdesk, Priority Support, Aspose Paid Supprot, Aspose APIs">
+    <meta name="robots" content="noindex,nofollow">
+    <link rel="shortcut icon" type="image/ico" href="favicon.ico" />
+    <title>Paid Support Helpdesk</title>
     
-    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/aspose/css/common.css?v0.13" type="text/css" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://joomla-aspose.dynabic.com/templates/aspose/css/font-awesome.css" type="text/css" />
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://menu.containerize.com/Scripts/Containerize.Menu.min.js"></script>
-    <link href="https://cms.admin.containerize.com/templates/aspose/css/AsposePtyLtdMenu.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/aspose/css/font-awesome.css" type="text/css" />
+    <!-- Bootstrap & Font CSS -->
+<!--<link rel="stylesheet" href="https://cms.admin.containerize.com/templates/aspose/css/bootstrap.css?v=331" type="text/css" />-->
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" type="text/css" />
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap" type="text/css" />
+<!-- Common CSS -->
+<link rel="stylesheet" href="https://cms.admin.containerize.com/templates/aspose/css/common.css?v0.13" type="text/css" />
+<link rel="stylesheet" href="https://cms.admin.containerize.com/templates/aspose/css/font-awesome.css" type="text/css" />
+<!-- Dynabic.Menu CSS -->
+<link rel="stylesheet" href="https://cms.admin.containerize.com/templates/aspose/css/AsposePtyLtdMenu.css?v2.10" type="text/css" />
+<!--Custom CSS-->
+<link href="css/custom-pshelpdeskV2.css" rel="stylesheet" />
 
-
-    <script type="text/javascript">
-        $(document).ready(function () {
-            if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)) {
-
-                $(".mobileanchor").removeAttr("href");
-            }
-        });
-        </script>
     <style type="text/css">
         #footer {
             bottom: 0 !important;
@@ -130,7 +134,15 @@
     </div>
 
    
-
+   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js" ></script>
+  <script src="https://cms.admin.containerize.com/templates/aspose/js/bootstrap.js" type="text/javascript" ></script>
+  <script src="https://cms.admin.containerize.com/templates/aspose/js/template.js" type="text/javascript" defer ></script>
+  <script src="https://menu.containerize.com/Scripts/Containerize.Menu.min.js" ></script>
+  <div id="DynabicMenuFooter"></div>
+  <script>
+      LoadMenu("Aspose");
+  </script>
 <script>
         // <![CDATA[
         $(function() {
@@ -158,9 +170,5 @@
             $('#ps-menubtn').toggleClass('twistmenu');
            });
            </script>
-<div id='DynabicMenuFooter'></div>
-<script>
-    LoadMenu("Aspose");
-</script>
 </body>
 </html>
