--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <!-- Dynabic.Menu CSS -->
 <link rel="stylesheet" href="https://cms.admin.containerize.com/templates/aspose/css/AsposePtyLtdMenu.css?v2.10" type="text/css" />
 <!--Custom CSS-->
-<link href="css/custom-pshelpdeskV2.css" rel="stylesheet" />
+<link href="custom-pshelpdesk.css" rel="stylesheet" />
 
     <style type="text/css">
         #footer {
